# WaterTracker

./: .clangd  .gitignore  ADD_APP_ICON.md  CMakeLists.txt  README.md  ReadMe_eng.md  main.cpp
resources/: app_icon.rc  resources.qrc
resources/qml/: WaterAmbient.qml
utility/: Models.h  Storage.cpp  Storage.h  Tracker.cpp  Tracker.h
utility/stats/: checkinfo.cpp  checkinfo.h
